--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>About Us</h2>
             <p>Hawk Drones offers drone fleets supply, deployment and operators training <br> for industrial, governmental or municipal clients.<br>
-                Mining Eagles was founded by ex IDF officers utilizing their experience of field work<br> and large scale operation management to create an efficient target oriented system.
+                Hawk Drones was founded by ex IDF officers utilizing their experience of field work<br> and large scale operation management to create an efficient target oriented system.
 
 </p>
           </div>
@@ -95,7 +95,7 @@
             <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading ">At Your Service</h2>
+            <h2 class="section-heading ">Our Services</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -132,54 +132,54 @@
           </div>
         </div> -->
 
-        <div class="col-lg-3 col-md-6 mb-4 text-center">
+        <div class="col-lg-6 col-md-6 mb-4 text-center">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/SecureDrone.jpg" alt="Security Services Drone">
             <div class="card-body">
               <h4 class="card-title">Security and Intelligence</h4>
               <p class="card-text">A wide variety of uses from compound or border patrol, monitoring movement of forces to documenting events for intelligence use.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
+        <div class="col-lg-6 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/SurveyDrone.jpg" alt="Surveying Services Drone">
             <div class="card-body">
               <h4 class="card-title">Surveying</h4>
               <p class="card-text">Drones can be used for quickly surveying large areas, in order to map them and even help identify illegal building or mining activities.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
+        <div class="col-lg-6 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/AgriDrone.jpg" alt="Agriculture Drone">
             <div class="card-body">
               <h4 class="card-title">Agriculture </h4>
               <p class="card-text">Using drones to survey fields and provide real-time information to framers can increase farming efficiency and crop yield.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
+        <div class="col-lg-6 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/InfraDrone.jpg" alt="Infrastructure Drone">
             <div class="card-body">
               <h4 class="card-title">Infrastructure inspection</h4>
               <p class="card-text">Efficiently scan and inspect power or communication infrastructures.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
             </div>
           </div>
         </div>
