--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <img class="card-img-top" src="img/InfraDrone.jpg" alt="Infrastructure Drone">
             <div class="card-body">
               <h4 class="card-title">Infrastructure inspection</h4>
-              <p class="card-text">Efficiently scan and inspect power or communication infrastructures.</p>
+              <p class="card-text">Efficiently scan and inspect power or communication infrastructures. <br> <br></p>
             </div>
             <div class="card-footer">
               <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
