Service Pages added
scroll-down added to navbar
four pages added for details about different services.
.secondNav added to css for service page navbar

--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Services</a>
-            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link js-scroll-trigger dropdown-toggle" href="#Services" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Services
+              </a>
+              <div class="dropdown-menu dropdown-menu-right"  aria-labelledby="navbarDropdownPortfolio">
+                <a style="color: black" class="dropdown-item" href="defense.html">Security and Intelligence</a>
+                <a style="color: black" class="dropdown-item" href="surveying.html">Surveying and Mapping</a>
+                <a style="color: black" class="dropdown-item" href="agriculture.html">Agriculture</a>
+                <a style="color: black" class="dropdown-item" href="infrastructure.html">Infrastructure Inspection</a>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -140,7 +146,7 @@
               <p class="card-text">A wide variety of uses from compound or border patrol, monitoring movement of forces to documenting events for intelligence use.</p>
             </div>
             <div class="card-footer">
-              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
+              <a href="defense.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
@@ -153,7 +159,7 @@
               <p class="card-text">Drones can be used for quickly surveying large areas, in order to map them and even help identify illegal building or mining activities.</p>
             </div>
             <div class="card-footer">
-              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
+              <a href="surveying.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
@@ -166,7 +172,7 @@
               <p class="card-text">Using drones to survey fields and provide real-time information to framers can increase farming efficiency and crop yield.</p>
             </div>
             <div class="card-footer">
-              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
+              <a href="agriculture.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
@@ -179,7 +185,7 @@
               <p class="card-text">Efficiently scan and inspect power or communication infrastructures. <br> <br></p>
             </div>
             <div class="card-footer">
-              <a href="#contact" class="btn btn-primary">Contact Us To Find Out More!</a>
+              <a href="infrastructure.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
