Infrastructur link problem fix 1

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a style="color: black" class="dropdown-item" href="defense.html">Security and Intelligence</a>
                 <a style="color: black" class="dropdown-item" href="surveying.html">Surveying and Mapping</a>
                 <a style="color: black" class="dropdown-item" href="agriculture.html">Agriculture</a>
-                <a style="color: black" class="dropdown-item" href="infrastructure.html">Infrastructure Inspection</a>
+                <a style="color: black" class="dropdown-item" href="Infrastructure.html">Infrastructure Inspection</a>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -185,7 +185,7 @@
               <p class="card-text">Efficiently scan and inspect power or communication infrastructures. <br> <br></p>
             </div>
             <div class="card-footer">
-              <a href="infrastructure.html" class="btn btn-primary">Find Out More!</a>
+              <a href="Infrastructure.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
